MacViews: Make buttons not request focus on mouse press.

On Cocoa, buttons never request focus on a mouse press. This CL changes
CustomButton::set_request_on_press to ensure buttons in MacViews also follow
this behavior.

BUG=611259

Review-Url: https://codereview.chromium.org/1994463002
Cr-Commit-Position: refs/heads/master@{#394971}

Former-commit-id: 3963480dc371af9a4569ac91d982720b66783928